Project4/Parse/MiniJavaParser.jj
/* Copyright (C) 2007, 2013, Marquette University.  All rights reserved. */
/* 2013 Jan 30 : Includes Xinu.* external calls and Concurrency syntax.  */

PARSER_BEGIN(MiniJavaParser)
  package Parse;
  import java.util.LinkedList;
  public class MiniJavaParser {}
PARSER_END(MiniJavaParser)

TOKEN_MGR_DECLS :
{
    static boolean anyErrors = false;
    static void error(String msg)
    {
            anyErrors = true;
            System.err.println(msg + ": line " + input_stream.getEndLine()
                           + ", column " + input_stream.getEndColumn());
        }
}

/****************/
/* White space. */
/****************/
SKIP :
{
      " " | "\t" | "\n" | "\r" | "\f"
}
SKIP :
{
  < "//" (~["\n","\r"])* ("\n"|"\r"|"\r\n")? >
| < "/*" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/" >
}

SKIP :
{
  < "package" (~[";"])* ";" >
| < "import" (~[";"])* ";" >
}

/*************************/
/* Lexical Specification */
/*************************/

TOKEN :
{
    /* Reserved words. */
      < CLASS: "class" >
    | < PUBLIC: "public" >
    | < STATIC: "static" >
    | < VOID: "void" >
    | < MAIN: "main" >
    | < STRING: "String" > 
    | < THREAD: "Thread" > 
    | < XINU: "Xinu" >

    /* Keywords */
    | < IF: "if" >
    | < ELSE: "else" >
    | < WHILE: "while" >
    | < TRUE: "true" >
    | < FALSE: "false" >
    | < THIS: "this" >
    | < NEW: "new" >
    | < INT_TYPE: "int" >
    | < BOOLEAN_TYPE: "boolean" >
    | < SYNCHRONIZED: "synchronized" >
    | < NULL: "null" >
    | < EXTENDS: "extends" >
    | < RETURN: "return" >

    /* Operators & Punctuation */
    | < OR: "||" >
    | < AND: "&&" >
    | < EQUALS: "==" >
    | < NOTEQ: "!=" >
    | < BANG: "!" >
    | < STAR: "*" >
    | < DIVIDE: "/" >
    | < PLUS: "+" >
    | < MINUS: "-" >
    | < LESS: "<" >
    | < GREATER: ">" >
    | < ASSIGN: "=" >
    | < DOT: "." >
    | < LBRACE: "{" >
    | < RBRACE: "}" >
    | < LPAREN: "(" >
    | < RPAREN: ")" >
    | < LBRACKET: "[" >
    | < RBRACKET: "]" >
    | < SEMI: ";" >
    | < COMMA: "," >
}


/************/
/* Literals */
/************/

TOKEN :
{
      < INT: ( "0" | ["1"-"9"] (["0"-"9"])* ) >
    | < STRING_LITERAL: "\"" (~["\""])*  "\"" >
}


/***************/
/* Identifiers */
/***************/
TOKEN :
{
      < ID: <LETTER> (<LETTER>|<DIGIT>|<UNDER>)* >
    | < #LETTER: ["A"-"Z","a"-"z"] >
    | < #DIGIT: ["0"-"9"] >
    | < #UNDER: "_" >
}

<DEFAULT>
SKIP :
{
  <~[]> { error("Illegal token"); }
}

/********************/
/* MiniJava Grammar */
/********************/

// Goal 	::= 	MainClass ( ClassDeclaration )* <EOF>
Absyn.Program Goal() :
{
    LinkedList<Absyn.ClassDecl> cl = new LinkedList<Absyn.ClassDecl>();
}
{
    ( LOOKAHEAD( [ <PUBLIC> ] <CLASS> <ID> <LBRACE> <PUBLIC> <STATIC> <VOID> <MAIN> ) 
      MainClassDeclaration(cl) 
    | ClassDeclaration(cl) 
    )* <EOF>
    { return new Absyn.Program(cl); }
}

// MainClass 	::= 	"class" Identifier "{" "public" "static" "void" "main" "(" "String" "[" "]" Identifier ")" "{" Statement "}" "}"
Absyn.ClassDecl MainClassDeclaration(LinkedList<Absyn.ClassDecl> cl) :
{
    Absyn.ClassDecl  cd;
    Absyn.Stmt stmt;
    Absyn.VarDecl var;
    Token name, arg;
    LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
    LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
    LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
    LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
}
{
    [ <PUBLIC> ] <CLASS> name = <ID> <LBRACE> <PUBLIC> <STATIC> <VOID> <MAIN>
    <LPAREN> <STRING> <LBRACKET> <RBRACKET> arg = <ID> <RPAREN>
    { formals.add(new Absyn.Formal(new Absyn.ArrayType(new Absyn.IdentifierType("String")), arg.image)); }
    <LBRACE> 
    ( LOOKAHEAD( Type() <ID> ) var = VarDeclaration() { locals.add(var); } )*
    ( stmt = Statement() { stmts.add(stmt); } )*
    <RBRACE> <RBRACE>
    {
        methods.add(new Absyn.MethodDecl(null, false, "main", formals, locals, stmts, new Absyn.IntegerLiteral(0)));
        cd = new Absyn.ClassDecl(name.image, null, new LinkedList<Absyn.VarDecl>(), methods);
        cl.add(cd);
        return cd;
    }
}

// ClassDeclaration ::= "class" Identifier ( "extends" Identifier )? "{" ( VarDeclaration )* ( MethodDeclaration )* "}"
void ClassDeclaration(LinkedList<Absyn.ClassDecl> cl) : 
{
    Token name, parent = null;
    Absyn.VarDecl v;
    Absyn.MethodDecl m;
    LinkedList<Absyn.VarDecl> field = new LinkedList<Absyn.VarDecl>();
    LinkedList<Absyn.MethodDecl> method = new LinkedList<Absyn.MethodDecl>();
}
{
    [ <PUBLIC> ] <CLASS> name = <ID> [ <EXTENDS> parent = <ID> ] <LBRACE>
    ( LOOKAHEAD( Type() <ID> ) v = VarDeclaration() { field.add(v); } )*
    ( m = MethodDeclaration() { method.add(m); } )*
    <RBRACE>
    {
        String pName = (parent != null) ? parent.image : null;
        cl.add(new Absyn.ClassDecl(name.image, pName, field, method));
    }
}
// MethodDeclaration ::= "public" Type Identifier "(" ( Type Identifier ( "," Type Identifier )* )? ")" "{" ( VarDeclaration )* ( Statement )* "return" Expression ";" "}"
Absyn.MethodDecl MethodDeclaration() :
{
    Absyn.Type rType, pType;
    Token name, pName;
    Absyn.Expr rVal;
    Absyn.VarDecl v;
    Absyn.Stmt s;
    boolean sync = false;
    LinkedList<Absyn.Formal> param = new LinkedList<Absyn.Formal>();
    LinkedList<Absyn.VarDecl> local = new LinkedList<Absyn.VarDecl>();
    LinkedList<Absyn.Stmt> stmt = new LinkedList<Absyn.Stmt>();
}
{
    <PUBLIC> [ <SYNCHRONIZED> { sync = true; } ] 
    rType = Type() name = <ID> "("
    [ pType = Type() pName = <ID> { param.add(new Absyn.Formal(pType, pName.image)); }
      ( "," pType = Type() pName = <ID> { param.add(new Absyn.Formal(pType, pName.image)); } )*
    ] ")" "{"
    ( LOOKAHEAD( Type() <ID> ) v = VarDeclaration() { local.add(v); } )*
    ( s = Statement() { stmt.add(s); } )*
    <RETURN> rVal = Expression() ";" "}"
    { return new Absyn.MethodDecl(rType, sync, name.image, param, local, stmt, rVal); }
}

// VarDeclaration 	::= 	Type Identifier ( = Expression )? ";"
Absyn.VarDecl VarDeclaration() :
{
    Absyn.Type type = null;
    Token      name = null;
    Absyn.Expr init = null;
}
{
    type = Type() name = <ID> [ "=" init = Expression() ] ";"
    { return new Absyn.VarDecl(type, name.image, init); }
}

Absyn.Type Type() :
{ Absyn.Type type; }
{
    type = BaseType() ( "[" "]" { type = new Absyn.ArrayType(type); } )*
    { return type; }
}

Absyn.Type BaseType() :
{ Token name; }
{
      <INT_TYPE> { return new Absyn.IntegerType(); }
    | <BOOLEAN_TYPE> { return new Absyn.BooleanType(); }
    | name = <ID> { return new Absyn.IdentifierType(name.image); }
}

Absyn.Stmt Statement() :
{ Absyn.Stmt stmt; }
{
    ( stmt = Block() 
    | stmt = IfStmt() 
    | stmt = WhileStmt() 
    | LOOKAHEAD(2) stmt = ArrayAssignStmt() 
    | stmt = AssignStmt() 
    | stmt = XinuCallStatement() ) 
    { return stmt; }
}

Absyn.Stmt Block() : {
    Absyn.Stmt st;
    LinkedList<Absyn.Stmt> sl = new LinkedList<Absyn.Stmt>();
}
{
    "{" (st = Statement() {sl.add(st); } )* "}"
    { return new Absyn.Block(sl); }
}

Absyn.Stmt IfStmt(): {
    Absyn.Expr ex;
    Absyn.Stmt st1, st2 = null; 
}
{
    <IF> "(" ex = Expression() ")" st1 = Statement()
    [ LOOKAHEAD(1) <ELSE> st2 = Statement() ]
    { return new Absyn.If(ex, st1, st2); }
}

Absyn.Stmt WhileStmt() : 
{
    Absyn.Expr ex;
    Absyn.Stmt st;
}
{
    <WHILE> "(" ex = Expression() ")" st = Statement()
    { return new Absyn.While(ex,st); }
}

Absyn.Stmt AssignStmt() : {
    Token id;
    Absyn.Expr ex1;
}
{
    id = <ID> "=" ex1 = Expression() ";" 
    { return new Absyn.Assign(new Absyn.Identifier(id.image), ex1); }
}

Absyn.Stmt ArrayAssignStmt() : {
    Token id;
    Absyn.Expr ex1, ex2;
}
{
    id = <ID> "[" ex1 = Expression() "]" "=" ex2 = Expression() ";" 
    { return new Absyn.ArrayAssign(new Absyn.Identifier(id.image), ex1, ex2); }
}

Absyn.XinuCallStmt XinuCallStatement() :
{
    Token method;
    Absyn.Expr arg;
    LinkedList<Absyn.Expr> args = new LinkedList<Absyn.Expr>();
}
{
    <XINU> "." method = <ID> 
    "(" [ arg = Expression() { args.add(arg); }
        ( "," arg = Expression()  { args.add(arg); } )* ]
    ")" ";" { return new Absyn.XinuCallStmt(method.image, args); }
}

Absyn.Expr Expression() : 
{ Absyn.Expr ex; }
{
    ex = OrExpression() { return ex; }
}

Absyn.Expr OrExpression() :
{ Absyn.Expr e1, e2; }
{
    e1 = AndExpression()
    ( "||" e2 = AndExpression() { e1 = new Absyn.OrExpression(e1, e2); } )*
    { return e1; }
}

Absyn.Expr AndExpression() : 
{ Absyn.Expr ex1, ex2; }
{
    ex1 = EqualityExpression()
    ("&&" ex2 = EqualityExpression() { ex1 = new Absyn.AndExpression(ex1,ex2); } )*
    {return ex1; }
}

Absyn.Expr EqualityExpression() : 
{ Absyn.Expr ex1, ex2; Token op; }
{
    ex1 = LessThanExpression()
    ( (op = "==" | op = "!=") ex2 = LessThanExpression()
      {
          if (op.image.equals("==")) ex1 = new Absyn.EqualExpr(ex1, ex2);
          else ex1 = new Absyn.NotEqExpr(ex1, ex2);
      }
    )*
    { return ex1; }
}

Absyn.Expr LessThanExpression() :{
    Absyn.Expr ex1,ex2; Token op;
}
{
    ex1 = AdditiveExpression()
    ( (op = "<" | op = ">" ) ex2 = AdditiveExpression()
      {
          if (op.image.equals("<")) ex1 = new Absyn.LessThan(ex1,ex2);
          else ex1 = new Absyn.GreaterThan(ex1,ex2);
      }
    )*
    {return ex1; }
}

Absyn.Expr AdditiveExpression() : {
    Absyn.Expr ex1,ex2; Token op;
}
{
    ex1 = MultiplilyExpression()
    ( (op = "+" | op = "-" ) ex2 = MultiplilyExpression()
        {
            if (op.image.equals("+")) ex1 = new Absyn.Plus(ex1,ex2);
            else ex1 = new Absyn.Minus(ex1,ex2);
        } 
    )*
    {return ex1;}
}

Absyn.Expr MultiplilyExpression() :
{ Absyn.Expr ex1, ex2; Token op; }
{
    ex1 = PrefixExpression()
    ( (op = "*" | op = "/" ) ex2 = PrefixExpression()
        {
            if (op.image.equals("*")) ex1 = new Absyn.Times(ex1,ex2);
            else ex1 = new Absyn.Divide(ex1,ex2);
        }
    )*
    {return ex1;}
}

Absyn.Expr PrefixExpression() : 
{Absyn.Expr ex; }
{
    "!" ex = PrefixExpression() { return new Absyn.Not(ex); }
  | "-" ex = PrefixExpression() { return new Absyn.NegExpr(ex); }
  | ex = PostfixExpression() { return ex; }
}

Absyn.Expr PostfixExpression() : 
{
    Absyn.Expr ex, index;
    Token id;
    LinkedList<Absyn.Expr> args = new LinkedList<Absyn.Expr>();
}
{
    ex = PrimaryExpression()
    ( "[" index = Expression() "]" { ex = new Absyn.ArrayLookup(ex,index); } 
    | LOOKAHEAD(3) "." id = <ID> "(" args = ExpressionList() ")" { ex = new Absyn.Call(ex, new Absyn.Identifier(id.image), args); }
    | LOOKAHEAD(2) "." id = <ID> { 
        if(id.image.equals("length")) { ex = new Absyn.ArrayLength(ex); }
        else { throw new ParseException("Expected length"); }
      }
    )*
    {return ex; }
}

Absyn.Expr PrimaryExpression() : 
{ 
    Token t;
    Absyn.Expr ex;
    LinkedList<Absyn.Expr> args = new LinkedList<Absyn.Expr>();
}
{
      t = <INT> { return new Absyn.IntegerLiteral(Integer.parseInt(t.image)); }
    | t = <STRING_LITERAL> { return new Absyn.StringLiteral(t.image); }
    | <TRUE> { return new Absyn.True(); }
    | <FALSE> { return new Absyn.False(); }
    | <NULL> { return new Absyn.NullExpr(); }
    | <THIS> { return new Absyn.This(); }
    | LOOKAHEAD(2) <NEW> <INT_TYPE> "[" ex = Expression() "]" { return new Absyn.NewArray(ex); }
    | <NEW> t = <ID> "(" ")" { return new Absyn.NewObject(new Absyn.Identifier(t.image)); }
    | <XINU> "." t = <ID> "(" args = ExpressionList() ")" { return new Absyn.XinuCallExpr(t.image, args); }
    | t = <ID> { return new Absyn.IdentifierExp(t.image); }
    | "(" ex = Expression() ")" { return ex; }
}

LinkedList<Absyn.Expr> ExpressionList() : {
    LinkedList<Absyn.Expr> li = new LinkedList<Absyn.Expr>();
    Absyn.Expr ex;
}
{
    [ 
        ex = Expression() { li.add(ex); }
        ( "," ex = Expression() { li.add(ex); } )*
    ]
    { return li; }
}
