Project5/Parse/MiniJavaParser.java
/* MiniJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  package Parse;
  import java.util.LinkedList;
  public class MiniJavaParser implements MiniJavaParserConstants {

/********************/
/* MiniJava Grammar */
/********************/

// Goal 	::= 	MainClass ( ClassDeclaration )* <EOF>
  static final public Absyn.Program Goal() throws ParseException {LinkedList<Absyn.ClassDecl> cl = new LinkedList<Absyn.ClassDecl>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(2147483647)) {
        MainClassDeclaration(cl);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CLASS:
        case PUBLIC:{
          ClassDeclaration(cl);
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(0);
{if ("" != null) return new Absyn.Program(cl);}
    throw new Error("Missing return statement in function");
}

// MainClass 	::= 	"class" Identifier "{" "public" "static" "void" "main" "(" "String" "[" "]" Identifier ")" "{" Statement "}" "}"
  static final public Absyn.ClassDecl MainClassDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ClassDecl  cd;
    Absyn.Stmt stmt;
    Absyn.VarDecl var;
    Token name, arg;
    LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
    LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
    LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
    LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PUBLIC:{
      jj_consume_token(PUBLIC);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    arg = jj_consume_token(ID);
    jj_consume_token(RPAREN);
formals.add(new Absyn.Formal(new Absyn.ArrayType(new Absyn.IdentifierType("String")), arg.image));
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      if (jj_2_2(2147483647)) {
        ;
      } else {
        break label_2;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case XINU:
      case IF:
      case WHILE:
      case LBRACE:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
methods.add(new Absyn.MethodDecl(null, false, "main", formals, locals, stmts, new Absyn.IntegerLiteral(0)));
        cd = new Absyn.ClassDecl(name.image, null, new LinkedList<Absyn.VarDecl>(), methods);
        cl.add(cd);
        {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

// ClassDeclaration ::= "class" Identifier ( "extends" Identifier )? "{" ( VarDeclaration )* ( MethodDeclaration )* "}"
  static final public void ClassDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Token name, parent = null;
    Absyn.VarDecl v;
    Absyn.MethodDecl m;
    LinkedList<Absyn.VarDecl> field = new LinkedList<Absyn.VarDecl>();
    LinkedList<Absyn.MethodDecl> method = new LinkedList<Absyn.MethodDecl>();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PUBLIC:{
      jj_consume_token(PUBLIC);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EXTENDS:{
      jj_consume_token(EXTENDS);
      parent = jj_consume_token(ID);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      if (jj_2_3(2147483647)) {
        ;
      } else {
        break label_4;
      }
      v = VarDeclaration();
field.add(v);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      m = MethodDeclaration();
method.add(m);
    }
    jj_consume_token(RBRACE);
String pName = (parent != null) ? parent.image : null;
        cl.add(new Absyn.ClassDecl(name.image, pName, field, method));
}

// MethodDeclaration ::= "public" Type Identifier "(" ( Type Identifier ( "," Type Identifier )* )? ")" "{" ( VarDeclaration )* ( Statement )* "return" Expression ";" "}"
  static final public Absyn.MethodDecl MethodDeclaration() throws ParseException {Absyn.Type rType, pType;
    Token name, pName;
    Absyn.Expr rVal;
    Absyn.VarDecl v;
    Absyn.Stmt s;
    boolean sync = false;
    LinkedList<Absyn.Formal> param = new LinkedList<Absyn.Formal>();
    LinkedList<Absyn.VarDecl> local = new LinkedList<Absyn.VarDecl>();
    LinkedList<Absyn.Stmt> stmt = new LinkedList<Absyn.Stmt>();
    jj_consume_token(PUBLIC);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYNCHRONIZED:{
      jj_consume_token(SYNCHRONIZED);
sync = true;
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    rType = Type();
    name = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT_TYPE:
    case BOOLEAN_TYPE:
    case ID:{
      pType = Type();
      pName = jj_consume_token(ID);
param.add(new Absyn.Formal(pType, pName.image));
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        pType = Type();
        pName = jj_consume_token(ID);
param.add(new Absyn.Formal(pType, pName.image));
      }
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_7:
    while (true) {
      if (jj_2_4(2147483647)) {
        ;
      } else {
        break label_7;
      }
      v = VarDeclaration();
local.add(v);
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case XINU:
      case IF:
      case WHILE:
      case LBRACE:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_8;
      }
      s = Statement();
stmt.add(s);
    }
    jj_consume_token(RETURN);
    rVal = Expression();
    jj_consume_token(SEMI);
    jj_consume_token(RBRACE);
{if ("" != null) return new Absyn.MethodDecl(rType, sync, name.image, param, local, stmt, rVal);}
    throw new Error("Missing return statement in function");
}

// VarDeclaration 	::= 	Type Identifier ( = Expression )? ";"
  static final public Absyn.VarDecl VarDeclaration() throws ParseException {Absyn.Type type = null;
    Token      name = null;
    Absyn.Expr init = null;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      init = Expression();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(SEMI);
{if ("" != null) return new Absyn.VarDecl(type, name.image, init);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type Type() throws ParseException {Absyn.Type type;
    type = BaseType();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACKET:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
type = new Absyn.ArrayType(type);
    }
{if ("" != null) return type;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type BaseType() throws ParseException {Token name;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT_TYPE:{
      jj_consume_token(INT_TYPE);
{if ("" != null) return new Absyn.IntegerType();}
      break;
      }
    case BOOLEAN_TYPE:{
      jj_consume_token(BOOLEAN_TYPE);
{if ("" != null) return new Absyn.BooleanType();}
      break;
      }
    case ID:{
      name = jj_consume_token(ID);
{if ("" != null) return new Absyn.IdentifierType(name.image);}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt Statement() throws ParseException {Absyn.Stmt stmt;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      stmt = Block();
      break;
      }
    case IF:{
      stmt = IfStmt();
      break;
      }
    case WHILE:{
      stmt = WhileStmt();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      if (jj_2_5(2)) {
        stmt = ArrayAssignStmt();
      } else if (jj_2_6(2)) {
        stmt = AssignStmt();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case XINU:{
          stmt = XinuCallStatement();
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return stmt;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt Block() throws ParseException {Absyn.Stmt st;
    LinkedList<Absyn.Stmt> sl = new LinkedList<Absyn.Stmt>();
    jj_consume_token(LBRACE);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case XINU:
      case IF:
      case WHILE:
      case LBRACE:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_10;
      }
      st = Statement();
sl.add(st);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new Absyn.Block(sl);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt IfStmt() throws ParseException {Absyn.Expr ex;
    Absyn.Stmt st1, st2 = null;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    ex = Expression();
    jj_consume_token(RPAREN);
    st1 = Statement();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      st2 = Statement();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
{if ("" != null) return new Absyn.If(ex, st1, st2);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt WhileStmt() throws ParseException {Absyn.Expr ex;
    Absyn.Stmt st;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    ex = Expression();
    jj_consume_token(RPAREN);
    st = Statement();
{if ("" != null) return new Absyn.While(ex,st);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt AssignStmt() throws ParseException {Token id;
    Absyn.Expr ex1;
    id = jj_consume_token(ID);
    jj_consume_token(ASSIGN);
    ex1 = Expression();
    jj_consume_token(SEMI);
{if ("" != null) return new Absyn.Assign(new Absyn.Identifier(id.image), ex1);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt ArrayAssignStmt() throws ParseException {Token id;
    Absyn.Expr ex1, ex2;
    id = jj_consume_token(ID);
    jj_consume_token(LBRACKET);
    ex1 = Expression();
    jj_consume_token(RBRACKET);
    jj_consume_token(ASSIGN);
    ex2 = Expression();
    jj_consume_token(SEMI);
{if ("" != null) return new Absyn.ArrayAssign(new Absyn.Identifier(id.image), ex1, ex2);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.XinuCallStmt XinuCallStatement() throws ParseException {Token method;
    Absyn.Expr arg;
    LinkedList<Absyn.Expr> args = new LinkedList<Absyn.Expr>();
    jj_consume_token(XINU);
    jj_consume_token(DOT);
    method = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case XINU:
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case NULL:
    case BANG:
    case MINUS:
    case LPAREN:
    case INT:
    case STRING_LITERAL:
    case ID:{
      arg = Expression();
args.add(arg);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          break label_11;
        }
        jj_consume_token(COMMA);
        arg = Expression();
args.add(arg);
      }
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(SEMI);
{if ("" != null) return new Absyn.XinuCallStmt(method.image, args);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr Expression() throws ParseException {Absyn.Expr ex;
    ex = OrExpression();
{if ("" != null) return ex;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr OrExpression() throws ParseException {Absyn.Expr e1, e2;
    e1 = AndExpression();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_12;
      }
      jj_consume_token(OR);
      e2 = AndExpression();
e1 = new Absyn.OrExpression(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr AndExpression() throws ParseException {Absyn.Expr ex1, ex2;
    ex1 = EqualityExpression();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_13;
      }
      jj_consume_token(AND);
      ex2 = EqualityExpression();
ex1 = new Absyn.AndExpression(ex1,ex2);
    }
{if ("" != null) return ex1;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr EqualityExpression() throws ParseException {Absyn.Expr ex1, ex2; Token op;
    ex1 = LessThanExpression();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUALS:
      case NOTEQ:{
        ;
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        break label_14;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUALS:{
        op = jj_consume_token(EQUALS);
        break;
        }
      case NOTEQ:{
        op = jj_consume_token(NOTEQ);
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      ex2 = LessThanExpression();
if (op.image.equals("==")) ex1 = new Absyn.EqualExpr(ex1, ex2);
          else ex1 = new Absyn.NotEqExpr(ex1, ex2);
    }
{if ("" != null) return ex1;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr LessThanExpression() throws ParseException {Absyn.Expr ex1,ex2; Token op;
    ex1 = AdditiveExpression();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LESS:
      case GREATER:{
        ;
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        break label_15;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LESS:{
        op = jj_consume_token(LESS);
        break;
        }
      case GREATER:{
        op = jj_consume_token(GREATER);
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      ex2 = AdditiveExpression();
if (op.image.equals("<")) ex1 = new Absyn.LessThan(ex1,ex2);
          else ex1 = new Absyn.GreaterThan(ex1,ex2);
    }
{if ("" != null) return ex1;}
    throw new Error("Missing return statement in function");
}
